WebCore/html/HTMLEmbedElement.h
@@ -23,11 +23,11 @@
 #ifndef HTMLEmbedElement_h
 #define HTMLEmbedElement_h
 
-#include "HTMLPlugInElement.h"
+#include "HTMLPlugInImageElement.h"
 
 namespace WebCore {
 
-class HTMLEmbedElement : public HTMLPlugInElement {
+class HTMLEmbedElement : public HTMLPlugInImageElement {
 public:
     HTMLEmbedElement(Document*);
     ~HTMLEmbedElement();
@@ -47,6 +47,7 @@ public:
     virtual void attributeChanged(Attribute*, bool preserveDecls = false);
     
     virtual bool isURLAttribute(Attribute*) const;
+    virtual const QualifiedName& imageSourceAttributeName() const;
 
     virtual void updateWidget();
     void setNeedWidgetUpdate(bool needWidgetUpdate) { m_needWidgetUpdate = needWidgetUpdate; }
@@ -61,15 +62,10 @@ public:
     String type() const;
     void setType(const String&);
 
-    const String& url() const { return m_url; }
-    const String& serviceType() const { return m_serviceType; }
-
     virtual void getSubresourceAttributeStrings(Vector<String>&) const;
 
 private:
-    String m_url;
     String m_pluginPage;
-    String m_serviceType;
     bool m_needWidgetUpdate;
 };
 
